--- a/public/stylesheets/sass/base.scss
+++ b/public/stylesheets/sass/base.scss
@@ -6,6 +6,7 @@ $ORANGE: #ff9900;
 @import "components/containers";
 @import "components/lists";
 @import "components/headers";
+@import "components/layout";
 @import "pages/artists";
 
 .jazz {
