--- a/public/stylesheets/sass/components/forms.scss
+++ b/public/stylesheets/sass/components/forms.scss
@@ -30,6 +30,7 @@
       margin-right: 20px;
       color: $ORANGE;
       font-size: 14px;
+      cursor: pointer;
     }
     &.inline {
       float: left;
