--- a/public/stylesheets/components/lists.css
+++ b/public/stylesheets/components/lists.css
@@ -4,7 +4,8 @@
   overflow: hidden; }
   .jazz ul.inline-list li {
     float: left;
-    margin-right: 3px; }
+    margin-right: 3px;
+    padding-bottom: 4px; }
     .jazz ul.inline-list li.last {
       margin-right: 0px; }
 .jazz ul li.last {
