--- a/public/stylesheets/sass/components/lists.scss
+++ b/public/stylesheets/sass/components/lists.scss
@@ -10,6 +10,7 @@
       li {
         float: left;
         margin-right: 3px;
+        padding-bottom: 4px;
         &.last {
           margin-right: 0px;
         }
