--- a/public/stylesheets/sass/base.scss
+++ b/public/stylesheets/sass/base.scss
@@ -54,6 +54,10 @@ ul {
 .snug-bottom {
   margin-bottom: 0px !important;
 }
+.snug {
+  margin: 0px !important;
+  padding: 0px !important;
+}
 .block {
   display: block !important;
 }
