alpha and omega

--- a/app/views/home/artists.html.haml
+++ b/app/views/home/artists.html.haml
@@ -1,6 +1,6 @@
 - @page_class = 'page-artists'
 
-.grid-4
+.grid-4.alpha
   .section
     .container.skin-dark
       .body
@@ -61,7 +61,7 @@
             %a.box{:href => '#'} Mikkel Ploug
           %li.last
             %a.box{:href => '#'} Mikkel Ploug
-.grid-8
+.grid-8.omega
   .container
     .body
       Blach
