--- a/app/views/home/shows.html.haml
+++ b/app/views/home/shows.html.haml
@@ -1,4 +1,4 @@
-.grid-4
+.grid-4.alpha
   %a.box.dark{:href => '#'} Search Shows By...
   - form_for :blah do |f|
     %fieldset
@@ -15,7 +15,7 @@
   .container.skin-dark
     .body
       Bach
-.grid-8
+.grid-8.omega
   %h3 Search results for Thursday 31st of March 2011:
   %ul.containers
     - 9.times do |t|
