--- a/app/views/home/shows.html.haml
+++ b/app/views/home/shows.html.haml
@@ -1,4 +1,5 @@
-.grid-4.alpha
+- @page_class = 'layout-1 page-shows'
+.col-1
   %a.box.dark{:href => '#'} Search Shows By...
   - form_for :blah do |f|
     %fieldset
@@ -15,7 +16,7 @@
   .container.skin-dark
     .body
       Bach
-.grid-8.omega
+.col-2
   %h3 Search results for Thursday 31st of March 2011:
   %ul.containers
     - 9.times do |t|
