grid view uses 10px instead of 11

--- a/app/views/home/artists.html.haml
+++ b/app/views/home/artists.html.haml
@@ -80,7 +80,7 @@
           %li.last
             %a.box{:href => '#'} Kevin Brow(drums)
 
-  .section
+  .section.pl10.pt5
     %h3 More videos by this artist:
   .section
     %ul.inline-list.grid-view
@@ -88,7 +88,7 @@
         %li.container{:class => cycle('first','','','last')}
           %a.block{:href => '#'}
             .body
-              = image_tag('http://dummyimage.com/141x77/000/fff')
+              = image_tag('http://dummyimage.com/140x77/000/fff')
               .clear
               %span.box.block.name{:href => '#'} Pete Robbins
               %p.instrument Alto Saxophone
