10px padding on containers for now

--- a/public/stylesheets/components/containers.css
+++ b/public/stylesheets/components/containers.css
@@ -2,6 +2,6 @@
   overflow: hidden;
   background-color: #fff; }
   .jazz .container .body {
-    padding: 9px 6px 18px 9px; }
+    padding: 10px; }
   .jazz .container.skin-dark {
     background-color: #000; }
