--- a/public/stylesheets/sass/components/containers.scss
+++ b/public/stylesheets/sass/components/containers.scss
@@ -3,7 +3,7 @@
     overflow: hidden;
     background-color: #fff;
     .body {
-      padding: 9px 6px 18px 9px;
+      padding: 10px;
     }
     &.skin-dark {
       background-color: #000;
