--- a/public/stylesheets/base.css
+++ b/public/stylesheets/base.css
@@ -121,6 +121,11 @@
     float: left; }
   .jazz .media-with-info .info {
     padding-left: 150px; }
+  .jazz .media-with-info.large .media {
+    width: 160px;
+    height: 160px; }
+  .jazz .media-with-info.large .info {
+    padding-left: 170px; }
 
 .jazz.page-artists-landing #search-by-name {
   width: 485px; }
