--- a/public/stylesheets/sass/components/layout.scss
+++ b/public/stylesheets/sass/components/layout.scss
@@ -27,6 +27,15 @@
     .info {
       padding-left: 150px;
     }
+    &.large {
+      .media {
+        width: 160px;
+        height: 160px;
+      }
+      .info {
+        padding-left: 170px;
+      }
+    }
   }
 
 }
